# FlightMAX

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FlightMAX.sln  FlightMAX.vcxproj  FlightMAX.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Debug/: FlightMAX.exp
src/: CMakeLists.txt  CMakeSettings.json  FlightMAX.cpp  FlightMAX.h  FlightMAX_starter_window.cpp  FlightMAX_starter_window.h
src/ImgWindow/: ImgFontAtlas.cpp
src/imgui/: imconfig.h
x64/Debug/: FlightMAX.xpl.recipe  win.xpl.recipe
x64/Debug/FlightMAX.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FlightMAX.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
